# cvp

./: .gitattributes  .gitignore  CVP_Command_Reference.md  CVP_Setup_Guide.md  README.md  cvp.code-workspace  package.json
cvp_backend/: BACKEND_ANALYSIS.md  DASHBOARD_ANALYSIS_REPORT.md  Dockerfile.disable  README.md  alembic.ini  debug_main.py  example.env  main.py  onsite_consultation.py  pyproject.toml
cvp_backend/alembic/: README  commands.txt  env.py
cvp_backend/api/: deps.py  deps_old.py  router.py
cvp_backend/core/: auth_utils.py  config.py  db.py  security.py
cvp_backend/docs/: ALL_ENDPOINTS.md  CUSTOM_FIELDS_BUG_FIX.md  DATETIME_FIXES_SUMMARY.md  DATETIME_HELPER_USAGE.md  DOCUMENTATION_INDEX.md  FINANCE_FRONTEND_GUIDE.md  FINANCE_FRONTEND_INTEGRATION_GUIDE.md  FOLLOWUP_STATUS_WORKFLOW.md  IMPLEMENTATION_COMPLETE.md  ONSITE_BEFORE_AFTER.md  ONSITE_IMPLEMENTATION_SUMMARY.md  ONSITE_MIGRATION_TEMPLATE.py  ONSITE_PATIENT_ENDPOINTS.md  ONSITE_PATIENT_VISUAL_BRIEF.md  ONSITE_QUICK_START.md  auth_analysis.md  complete_signup_approval_flow.md  doctor_availability_exception_implementation.md  doctor_availiability_frontend_implementation_guide.md  endpoint_role_mapping.md  enhanced_admin_user_management.md  follow_up_schedule_data_flow.md  quick_reference_card.md  staff_admin_approval_implementation.md  unified_admin_approval_system.md
cvp_backend/models/: __init__.py  alembic_base.py  appointments_model.py  audit_model.py  cases_model.py  doctor_availability_exception_model.py  doctor_availability_model.py  doctor_preferences_model.py  enum_option_model.py  (+12 more)
(+222 files in other folders)
