[project]
name = "pms-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.17.2",
    "argon2-cffi>=25.1.0",
    "bcrypt>=5.0.0",
    "emails>=0.6",
    "fastapi[standard]>=0.124.2",
    "pandas>=2.3.3",
    "passlib>=1.7.4",
    "psycopg>=3.3.2",
    "psycopg-binary>=3.3.2",
    "psycopg2-binary>=2.9.11",
    "pydantic-settings>=2.12.0",
    "PyJWT>=2.8.0,<3.0.0",
    "pytest>=9.0.2",
    "slowapi>=0.1.9",
    "sqlmodel>=0.0.27",
]
